robot-dev/RoboRIO_workspace/.metadata/.plugins/org.eclipse.cdt.ui/O2C2015FRCStemFest.build.log
20:21:03 **** Incremental Build of configuration Debug for project O2C2015FRCStemFest ****
Info: Internal Builder is used for build
arm-frc-linux-gnueabi-g++ -std=c++1y "-IC:\\Users\\Kett/wpilib/cpp/current/include" "-IC:\\Users\\Kett\\RoboRIO_workspace\\O2C2015FRCStemFest\\src" -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Autonomous.o" "..\\src\\Autonomous.cpp" 
..\src\Autonomous.cpp: In member function 'void AUTONOMOUS::ExecWait4()':
..\src\Autonomous.cpp:402:107: error: no matching function for call to 'SmartDashboard::GetString(const char [19])'
  SmartDashboard::PutString("Autonomous Command", "Wait4_" + SmartDashboard::GetString("Autonomous Command"));
                                                                                                           ^
..\src\Autonomous.cpp:402:107: note: candidate is:
In file included from C:\Users\Kett\RoboRIO_workspace\O2C2015FRCStemFest\src/Definitions.h:32:0,
                 from C:\Users\Kett\RoboRIO_workspace\O2C2015FRCStemFest\src/Autonomous.h:11,
                 from ..\src\Autonomous.cpp:8:
C:\Users\Kett/wpilib/cpp/current/include/SmartDashboard/SmartDashboard.h:33:22: note: static std::string SmartDashboard::GetString(llvm::StringRef, llvm::StringRef)
   static std::string GetString(llvm::StringRef keyName,
                      ^
C:\Users\Kett/wpilib/cpp/current/include/SmartDashboard/SmartDashboard.h:33:22: note:   candidate expects 2 arguments, 1 provided

20:21:04 Build Finished (took 733ms)

